# voxkit

./: .gitignore  AGENTS.md  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: architecture.md  index.md
docs/reference/: llm.md  pipeline.md  stt.md  tts.md
voxkit/: __init__.py
voxkit/core/: __init__.py  pipeline.py
voxkit/llm/: __init__.py  base.py
voxkit/stt/: __init__.py  base.py  sarvam.py
voxkit/tts/: __init__.py  base.py  sarvam.py
