[project]
name = "voxkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepgram-sdk>=7.4.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
    "sarvamai>=0.1.28",
]
