[project]
name = "voxkit"
version = "0.0.1"
description = "A python library for building voice agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepgram-sdk>=7.4.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "python-dotenv>=1.2.2",
    "sarvamai>=0.1.28",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.27.0",
]

[dependency-groups]
dev = [
    "langchain-groq>=1.1.3",
    "sounddevice>=0.5.5",
]
